--- a/calamares/modules/packages.conf
+++ b/calamares/modules/packages.conf
@@ -7,5 +7,117 @@ operations:
       - 'live-config'
       - 'live-config-systemd'
       - 'live-tools'
+      - 'cracklib-runtime'
+      - 'kio'
+      - 'kpackagetool5'
+      - 'kwayland-data'
+      - 'kwayland-integration'
+      - 'libboost-python1.67.0'
+      - 'libcrack2'
+      - 'libdbusmenu-qt5-2'
+      - 'libfam0'
+      - 'libhfstospell10'
+      - 'libkf5archive5'
+      - 'libkf5attica5'
+      - 'libkf5auth-data'
+      - 'libkf5auth5'
+      - 'libkf5codecs-data'
+      - 'libkf5codecs5'
+      - 'libkf5completion-data'
+      - 'libkf5completion5'
+      - 'libkf5config-bin'
+      - 'libkf5config-data'
+      - 'libkf5configcore5'
+      - 'libkf5configgui5'
+      - 'libkf5configwidgets-data'
+      - 'libkf5configwidgets5'
+      - 'libkf5coreaddons-data'
+      - 'libkf5coreaddons5'
+      - 'libkf5crash5'
+      - 'libkf5dbusaddons-bin'
+      - 'libkf5dbusaddons-data'
+      - 'libkf5dbusaddons5'
+      - 'libkf5doctools5'
+      - 'libkf5globalaccel-bin'
+      - 'libkf5globalaccel-data'
+      - 'libkf5globalaccel5'
+      - 'libkf5globalaccelprivate5'
+      - 'libkf5guiaddons5'
+      - 'libkf5i18n-data'
+      - 'libkf5i18n5'
+      - 'libkf5iconthemes-bin'
+      - 'libkf5iconthemes-data'
+      - 'libkf5iconthemes5'
+      - 'libkf5idletime5'
+      - 'libkf5itemviews-data'
+      - 'libkf5itemviews5'
+      - 'libkf5jobwidgets-data'
+      - 'libkf5jobwidgets5'
+      - 'libkf5kiocore5'
+      - 'libkf5kiontlm5'
+      - 'libkf5kiowidgets5'
+      - 'libkf5notifications-data'
+      - 'libkf5notifications5'
+      - 'libkf5package-data'
+      - 'libkf5package5'
+      - 'libkf5parts-data'
+      - 'libkf5parts-plugins'
+      - 'libkf5parts5'
+      - 'libkf5plasma5'
+      - 'libkf5service-bin'
+      - 'libkf5service-data'
+      - 'libkf5service5'
+      - 'libkf5solid5'
+      - 'libkf5solid5-data'
+      - 'libkf5sonnet5-data'
+      - 'libkf5sonnetcore5'
+      - 'libkf5sonnetui5'
+      - 'libkf5textwidgets-data'
+      - 'libkf5textwidgets5'
+      - 'libkf5wallet-bin'
+      - 'libkf5wallet-data'
+      - 'libkf5wallet5'
+      - 'libkf5waylandclient5'
+      - 'libkf5widgetsaddons-data'
+      - 'libkf5widgetsaddons5'
+      - 'libkf5windowsystem-data'
+      - 'libkf5windowsystem5'
+      - 'libkf5xmlgui-bin'
+      - 'libkf5xmlgui-data'
+      - 'libkf5xmlgui5'
+      - 'libkpmcore7'
+      - 'libkwalletbackend5-5'
+      - 'libphonon4qt5-4'
+      - 'libpolkit-qt5-1-1'
+      - 'libpwquality-common'
+      - 'libpwquality1'
+      - 'libqt5concurrent5'
+      - 'libqt5positioning5'
+      - 'libqt5printsupport5'
+      - 'libqt5qml5'
+      - 'libqt5quick5'
+      - 'libqt5quickwidgets5'
+      - 'libqt5script5'
+      - 'libqt5sensors5'
+      - 'libqt5sql5'
+      - 'libqt5sql5-sqlite'
+      - 'libqt5test5'
+      - 'libqt5texttospeech5'
+      - 'libqt5waylandclient5'
+      - 'libqt5waylandcompositor5'
+      - 'libqt5webchannel5'
+      - 'libqt5webkit5'
+      - 'libqt5xml5'
+      - 'libvoikko1'
+      - 'libyaml-cpp0.6'
+      - 'media-player-info'
+      - 'phonon4qt5'
+      - 'phonon4qt5-backend-vlc'
+      - 'qml-module-qtquick-window2'
+      - 'qml-module-qtquick2'
+      - 'qtwayland5'
+      - 'sonnet-plugins'
+      - 'squashfs-tools'
+      - 'wamerican'
       - 'calamares-settings-solydxk'
       - 'calamares'
