Fix bug in SolydK 11: not showing install icon

--- a/install-solydxk.desktop
+++ b/install-solydxk.desktop
@@ -6,7 +6,7 @@ GenericName=Calamares Installer
 Exec=install-solydxk
 Comment=Calamares — Installer for SolydXK Live
 Keywords=calamares;system;install;solydxk;installer
-Icon=install-solydxk
+Icon=installsolydxk
 Terminal=false
 Categories=Qt;System;
 StartupWMClass=calamares
