--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: calamares-settings-solydxk
 Section: utils
 Priority: optional
 Maintainer: Arjen Balfoort <arjenbalfoort@hotmail.com>
-Build-Depends: debhelper-compat (= 13), libglib2.0-bin
+Build-Depends: debhelper-compat (= 13), intltool, libglib2.0-bin
 Standards-Version: 4.5.0
 Rules-Requires-Root: no
 
