--- a/calamares/modules/finished.conf
+++ b/calamares/modules/finished.conf
@@ -4,6 +4,19 @@
 # Configuration for the "finished" page, which is usually shown only at
 # the end of the installation (successful or not).
 ---
+# DEPRECATED
+#
+# The finished page can hold a "restart system now" checkbox.
+# If this is false, no checkbox is shown and the system is not restarted
+# when Calamares exits.
+# restartNowEnabled: true
+
+# DEPRECATED
+#
+# Initial state of the checkbox "restart now". Only relevant when the
+# checkbox is shown by restartNowEnabled.
+# restartNowChecked: false
+
 # Behavior of the "restart system now" button.
 #
 # There are four usable values:
