--- a/calamares/modules/welcome.conf
+++ b/calamares/modules/welcome.conf
@@ -15,10 +15,10 @@
 # The setting can also be a full URL which will then be used
 # instead of the one from the branding file, or empty or not-set
 # which will hide the button.
-showSupportUrl:         true
-showKnownIssuesUrl:     false
+showSupportUrl:             false
+showKnownIssuesUrl:    false
 showReleaseNotesUrl:    false
-showDonateUrl:  https://solydxk.com/
+showDonateUrl:               
 
 # Requirements checking. These are general, generic, things
 # that are checked. They may not match with the actual requirements
@@ -79,9 +79,14 @@ requirements:
 #       data. Timezone, city, or other data will not be recognized.
 #
 geoip:
-    style:  "xml"
-    url:    "https://ipapi.co/xml"  # extended XML format
-    selector: "country"  # blank uses default, which is wrong
+    style:    "xml"
+    url:      "https://geoip.kde.org/v1/ubiquity"  # extended XML format
+    selector: "CountryCode"  # blank uses default, which is wrong
+
+#geoip:
+#    style:  "xml"
+#    url:    "https://ipapi.co/xml"  # extended XML format
+#    selector: "country"  # blank uses default, which is wrong
 
 # User interface
 #
