--- a/calamares/modules/fstab.conf
+++ b/calamares/modules/fstab.conf
@@ -14,6 +14,7 @@
 mountOptions:
     default: defaults,noatime
     btrfs: defaults,noatime,space_cache,autodefrag
+    f2fs: defaults,noatime,background_gc=on,user_xattr,acl,active_logs=6
 
 # Mount options to use for the EFI System Partition. If not defined, the
 # *mountOptions* for *vfat* are used, or if that is not set either,
@@ -23,14 +24,28 @@ efiMountOptions: umask=0077
 # If a filesystem is on an SSD, add the following options. If a specific
 # filesystem is listed here, use those options, otherwise no additional
 # options are set (i.e. there is no *default* like in *mountOptions*).
+#
+# This example configuration applies the *discard* option to most
+# common filesystems on an SSD. This may not be the right option
+# for your distribution. If you use a systemd timer to trim the
+# SSD, it may interfere with the *discard* option. Opinions vary
+# as to whether *discard* is worth the effort -- it depends on
+# the usage pattern of the disk as well.
+#
+# ssdExtraMountOptions:
+#     ext4: discard
+#     jfs: discard
+#     xfs: discard
+#     swap: discard
+#     btrfs: discard,compress=lzo
+#
+# The standard configuration applies only lzo compression to btrfs
+# and does nothing for other filesystems.
 ssdExtraMountOptions:
-    ext4: discard
-    jfs: discard
-    xfs: discard
-    swap: discard
-    btrfs: discard,compress=lzo
+    ext4: errors=remount-ro
+    btrfs: compress=lzo
 
 # Additional options added to each line in /etc/crypttab
-crypttabOptions: luks
+#crypttabOptions: luks
 # For Debian and Debian-based distributions, change the above line to:
 crypttabOptions: luks,keyscript=/bin/cat
