--- a/calamares/modules/users.conf
+++ b/calamares/modules/users.conf
@@ -3,25 +3,36 @@
 #
 # Configuration for the one-user-system user module.
 #
-# Besides these settings, the user module also places the following
-# keys into the globalconfig area, based on user input in the view step.
+# Besides these settings, the users module also places the following
+# keys into the Global Storage area, based on user input in the view step.
 #
 # - hostname
 # - username
 # - password (obscured)
 # - autologinUser (if enabled, set to username)
 #
-# These globalconfig keys are set when the jobs for this module
-# are created.
+# These Global Storage keys are set when the configuration for this module
+# is read and when they are modified in the UI.
 ---
-# General users group
-userGroup:       users
-
 # Used as default groups for the created user.
 # Adjust to your Distribution defaults.
+#
+# Each entry in the *defaultGroups* list is either:
+#   - a string, naming a group; this is a **non**-system group
+#     which does not need to exist in the target system; if it
+#     does not exist, it will be created.
+#   - an entry with subkeys *name*, *must_exist* and *system*;
+#     if the group *must_exist* and does not, an error is thrown
+#     and the installation fails.
+#
+#     The group is created if it does not exist, and it is
+#     created as a system group (GID < 1000) or user group
+#     (GID >= 1000) depending on the value of *system*.
 defaultGroups:
+    - users
+    - video
+    - audio
     - adm 
-    - audio 
     - bluetooth 
     - cdrom 
     - dialout 
@@ -36,10 +47,8 @@ defaultGroups:
     - scanner 
     - sudo 
     - tape 
-    - users 
     - vboxsf 
     - vboxusers 
-    - video 
     - systemd-journal
 
 # Some Distributions require a 'autologin' group for the user.
@@ -144,7 +153,7 @@ allowWeakPasswordsDefault: false
 #    and rely on a correct configuration file in /etc/default/useradd
 #  - set, non-empty, use that path as shell. No validation is done
 #    that the shell actually exists or is executable.
-# userShell: /bin/bash
+userShell: /bin/bash
 
 # Hostname setting
 #
