--- a/calamares/settings.conf
+++ b/calamares/settings.conf
@@ -1,5 +1,14 @@
+# SPDX-FileCopyrightText: no
+# SPDX-License-Identifier: CC0-1.0
+#
 # Configuration file for Calamares
-# Syntax is YAML 1.2
+# 
+# This is the top-level configuration file for Calamares.
+# It specifies what modules will be used, as well as some
+# overall characteristics -- is this a setup program, or
+# an installer. More specific configuration is devolved
+# to the branding file (for the UI) and the individual
+# module configuration files (for functionality).
 ---
 # Modules can be job modules (with different interfaces) and QtWidgets view
 # modules. They could all be placed in a number of different paths.
@@ -26,11 +35,29 @@
 modules-search: [ local, /usr/lib/calamares/modules ]
 
 # Instances section. This section is optional, and it defines custom instances
-# for modules of any kind. An instance entry has an module name, an instance
-# name, and a configuration file name. The primary goal of this mechanism is
-# to allow loading multiple instances of the same module, with different
-# configuration. If you don't need this, the instances section can safely be
-# left empty.
+# for modules of any kind. An instance entry has these keys:
+# - *module* name, which matches the module name from the module descriptor
+#   (usually the name of the directory under `src/modules/`, but third-
+#   party modules may diverge.
+# - *id* (optional) an identifier to distinguish this instance from
+#   all the others. If none is given, the name of the module is used.
+#   Together, the module and id form an instance key (see below).
+# - *config* (optional) a filename for the configuration. If none is
+#   given, *module*`.conf` is used (e.g. `welcome.conf` for the welcome
+#   module)
+# - *weight* (optional) In the *exec* phase of the sequence, progress
+#   is reported as jobs are completed. The jobs from a single module
+#   together contribute the full weight of that module. The overall
+#   progress (0 .. 100%) is divided up according to the weight of each
+#   module. Give modules that take a lot of time to complete, a larger
+#   weight to keep the overall progress moving along steadily. This
+#   weight overrides a weight given in the module descriptor. If no weight
+#   is given, uses the value from the module descriptor, or 1 if there
+#   isn't one there either.
+#
+# The primary goal of this mechanism is to allow loading multiple instances
+# of the same module, with different configuration. If you don't need this,
+# the instances section can safely be left empty.
 #
 # Module name plus instance name makes an instance key, e.g.
 # "webview@owncloud", where "webview" is the module name (for the webview
@@ -43,10 +70,11 @@ modules-search: [ local, /usr/lib/calamares/modules ]
 # mentioning a module without a full instance key (e.g. "welcome")
 # means that implicit module.
 #
-# An instance must specify its configuration file (e.g. `webview-home.conf`).
+# An instance may specify its configuration file (e.g. `webview-home.conf`).
 # The implicit instances all have configuration files named `<module>.conf`.
 # This (implict) way matches the source examples, where the welcome
-# module contains an example `welcome.conf`.
+# module contains an example `welcome.conf`. Specify a *config* for
+# any module (also implicit instances) to change which file is used.
 #
 # For more information on running module instances, run Calamares in debug
 # mode and check the Modules page in the Debug information interface.
@@ -62,6 +90,28 @@ modules-search: [ local, /usr/lib/calamares/modules ]
 #  module:   webview
 #  config:   owncloud.conf
 
+# Sequence section. This section describes the sequence of modules, both
+# viewmodules and jobmodules, as they should appear and/or run.
+#
+# A jobmodule instance key (or name) can only appear in an exec phase, whereas
+# a viewmodule instance key (or name) can appear in both exec and show phases.
+# There is no limit to the number of show or exec phases. However, the same
+# module instance key should not appear more than once per phase, and
+# deployers should take notice that the global storage structure is persistent
+# throughout the application lifetime, possibly influencing behavior across
+# phases. A show phase defines a sequence of viewmodules (and therefore
+# pages). These viewmodules can offer up jobs for the execution queue.
+#
+# An exec phase displays a progress page (with brandable slideshow). This
+# progress page iterates over the modules listed in the *immediately
+# preceding* show phase, and enqueues their jobs, as well as any other jobs
+# from jobmodules, in the order defined in the current exec phase.
+#
+# It then executes the job queue and clears it. If a viewmodule offers up a
+# job for execution, but the module name (or instance key) isn't listed in the
+# immediately following exec phase, this job will not be executed.
+#
+# YAML: list of lists of strings.
 sequence:
 # Phase 1 - prepare.
 # View modules are shown as UI pages, jobs from job modules
@@ -69,10 +119,12 @@ sequence:
 # Jobs should be executed sparingly (if at all) in this phase.
 - show:
   - welcome
+#  - notesqml
   - locale
   - keyboard
   - partition
   - users
+#  - tracking
   - summary
   
 # Phase 2 - install.
@@ -82,6 +134,9 @@ sequence:
 # view module jobs should be enqueued. Job modules are
 # also allowed.
 - exec:
+#  - dummycpp
+#  - dummyprocess
+#  - dummypython
   - partition
   - mount
   - unpackfs
@@ -91,17 +146,23 @@ sequence:
   - locale
   - keyboard
   - localecfg
+  - luksbootkeyfile
+  - luksopenswaphookcfg
+#  - dracutlukscfg
+  - plymouthcfg
+#  - initcpiocfg
+#  - initcpio
   - users
   - displaymanager
   - networkcfg
   - hwclock
   - services-systemd
+#  - dracut
   - bootloader-config
   - grubcfg
   - bootloader
   - packages
-  - luksbootkeyfile
-  - plymouthcfg
+  - packages-non-free
   - initramfscfg
   - initramfs
   - sources-media-unmount
@@ -112,6 +173,7 @@ sequence:
 # executed immediately in the background.
 # Jobs should be executed sparingly (if at all) in this phase.
 - show:
+#  - webview@owncloud
   - finished
 
 # A branding component is a directory, either in SHARE/calamares/branding or
