New package handling modules: conditional, localize

--- a/calamares/settings.conf
+++ b/calamares/settings.conf
@@ -162,6 +162,8 @@ sequence:
   - grubcfg
   - bootloader
   - packages
+  - packages-conditional
+  - packages-localize
   - packages-non-free
   - initramfscfg
   - initramfs
