--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,8 @@ Depends: ${misc:Depends},
     cryptsetup,
     keyutils,
     qml-module-qtquick-window2,
-    qml-module-qtquick2
+    qml-module-qtquick2,
+    python3-apt
 Provides: calamares-settings
 Description: SolydXK theme and settings for the Calamares Installer
  Calamares is a generic installer framework for Linux distributions.
