--- a/calamares/modules/users.conf
+++ b/calamares/modules/users.conf
@@ -29,27 +29,32 @@
 #     created as a system group (GID < 1000) or user group
 #     (GID >= 1000) depending on the value of *system*.
 defaultGroups:
-    - users
-    - video
+    - cdrom
+    - floppy
+    - sudo
     - audio
-    - adm 
-    - bluetooth 
-    - cdrom 
-    - dialout 
-    - fax 
-    - floppy 
-    - fuse 
-    - lpadmin 
-    - netdev 
-    - plugdev 
-    - powerdev 
-    - sambashare 
-    - scanner 
-    - sudo 
-    - tape 
-    - vboxsf 
-    - vboxusers 
-    - systemd-journal
+    - dip
+    - video
+    - plugdev
+    - netdev
+    - lpadmin
+    - scanner
+    - bluetooth
+    - name: users
+      must_exist: true
+      system: true
+    - name: sambashare
+      must_exist: false
+      system: true
+    - name: vboxsf
+      must_exist: false
+      system: true
+    - name: vboxusers
+      must_exist: false
+      system: true
+    - name: systemd-journal
+      must_exist: false
+      system: true
 
 # Some Distributions require a 'autologin' group for the user.
 # Autologin causes a user to become automatically logged in to
