--- a/calamares/modules/displaymanager.conf
+++ b/calamares/modules/displaymanager.conf
@@ -16,13 +16,13 @@
 # is attempted. You can also list "sysconfig" in this list instead.
 #
 displaymanagers:
-  - slim
-  - sddm
+#  - slim
+#  - sddm
   - lightdm
-  - gdm
-  - mdm
-  - lxdm
-  - kdm
+#  - gdm
+#  - mdm
+#  - lxdm
+#  - kdm
 
 # Enable the following settings to force a desktop environment
 # in your displaymanager configuration file. This will attempt
