--- a/calamares/modules/partition.conf
+++ b/calamares/modules/partition.conf
@@ -216,6 +216,18 @@ defaultFileSystemType:  "ext4"
 #   - maxSize: maximum partition size (optional parameter)
 #   - features: filesystem features (optional parameter; requires KPMCore >= 4.2.0)
 #       name: boolean or integer or string
+partitionLayout:
+     - name: "solydxk"
+       filesystem: "ext4"
+       mountPoint: "/"
+       size: 20%
+       minSize: 10G
+       maxSize: 50G
+     - name: "home"
+       filesystem: "ext4"
+       mountPoint: "/home"
+       size: 100%
+       minSize: 1G
 
 # Checking for available storage
 #
