Add module to fix system when using unencrypted /boot and encrypted /

--- a/calamares/settings.conf
+++ b/calamares/settings.conf
@@ -133,6 +133,7 @@ sequence:
 # also allowed.
 - exec:
   - partition
+#  - zfs
   - mount
   - unpackfs
   - sources-media
@@ -143,6 +144,8 @@ sequence:
   - keyboard
   - localecfg
   - luksbootkeyfile
+  - luksopenswaphookcfg
+  - luks-ubootfix
   - plymouthcfg
   - users
   - displaymanager
