--- a/calamares/modules/packages-localize.conf
+++ b/calamares/modules/packages-localize.conf
@@ -14,6 +14,9 @@ localize:
     - 'thunderbird'
     - 'calligra'
     - 'gimp'
+    - 'aspell'
+    - 'hunspell'
+    - 'manpages'
 
 # List of packages (seperated by space) by locale:
 #    - ja_jp: 'fonts-vlgothic fonts-takao xfonts-intl-japanese im-config fcitx-mozc'
