--- a/calamares/settings.conf
+++ b/calamares/settings.conf
@@ -144,7 +144,7 @@ sequence:
   - keyboard
   - localecfg
   - luksbootkeyfile
-  - luks-ubootfix
+  - luksboot-fix
   - plymouthcfg
   - users
   - displaymanager
