--- a/conf/install-solydxk.desktop
+++ b/conf/install-solydxk.desktop
@@ -3,25 +3,37 @@ Type=Application
 Version=1.0
 Name=Install SolydXK
 Name[ca]=Instal·la SolydXK
+Name[de]=SolydXK installieren
+Name[it]=Installa SolydXK
 Name[nl]=Installeer SolydXK
 Name[pt]=Instalar SolydXK
 Name[sr]=Инсталирај СолидИксК
+Name[tr]=SolydXK Yükle
 GenericName=Calamares Installer
 GenericName[ca]=Instal·lador Calamares
+GenericName[de]=Calamares Installationsprogramm
+GenericName[it]=Installatore Calamares
 GenericName[nl]=Calamares Installatieprogramma
 GenericName[pt]=Instalador Calamares
 GenericName[sr]=Каламарес инсталатер
+GenericName[tr]=Calamares Yükleyici
 Exec=install-solydxk
 Comment=Calamares - Installer for SolydXK Live
 Comment[ca]=Instal·lador Calamares per a SolydXK Live
+Comment[de]=Calamares - Installationsprogramm für SolydXK Live
+Comment[it]=Calamares - Installatore per SolydXK Live
 Comment[nl]=Calamares - Installatieprogramma voor SolydXK Live
 Comment[pt]=Instalador-Calamares para SolydXK Live
 Comment[sr]=Каламарес — инсталатер за СолидИксК
+Comment[tr]=Calamares - SolydXK Live için Yükleyici
 Keywords=calamares;system;install;solydxk;installer
 Keywords[ca]=calamares;system;install;solydxk;installer
+Keywords[de]=Calamares;System;Installation;Solydxk;Installationsprogramm
+Keywords[it]=calamares;sistema;installazione;solydxk;installatore
 Keywords[nl]=calamares;systeem;installeren;solydxk;installatieprogramma
 Keywords[pt]=calamares;sistema;instalar;solydxk;instalador
 Keywords[sr]=calamares;system;install;solydxk;installer;каламарес;инсталатер;систем
+Keywords[tr]=calamares;system;install;solydxk;installer
 Icon=installsolydxk
 Terminal=false
 Categories=Qt;System;
