--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,8 @@ Depends: ${misc:Depends},
     keyutils,
     qml-module-qtquick-window2,
     qml-module-qtquick2,
-    python3-apt
+    python3-apt,
+    util-linux
 Provides: calamares-settings
 Description: SolydXK theme and settings for the Calamares Installer
  Calamares is a generic installer framework for Linux distributions.
