Updated translations: nl, pt

--- a/conf/install-solydxk.desktop
+++ b/conf/install-solydxk.desktop
@@ -7,6 +7,7 @@ Name[de]=SolydXK installieren
 Name[it]=Installa SolydXK
 Name[nl]=Installeer SolydXK
 Name[pt]=Instalar SolydXK
+Name[pt_BR]=Instalar SolydXK
 Name[sr]=Инсталирај СолидИксК
 Name[tr]=SolydXK Yükle
 GenericName=Calamares Installer
@@ -15,6 +16,7 @@ GenericName[de]=Calamares Installationsprogramm
 GenericName[it]=Installatore Calamares
 GenericName[nl]=Calamares Installatieprogramma
 GenericName[pt]=Instalador Calamares
+GenericName[pt_BR]=Instalador Calamares
 GenericName[sr]=Каламарес инсталатер
 GenericName[tr]=Calamares Yükleyici
 Exec=install-solydxk
@@ -24,6 +26,7 @@ Comment[de]=Calamares - Installationsprogramm für SolydXK Live
 Comment[it]=Calamares - Installatore per SolydXK Live
 Comment[nl]=Calamares - Installatieprogramma voor SolydXK Live
 Comment[pt]=Instalador-Calamares para SolydXK Live
+Comment[pt_BR]=Instalador-Calamares para SolydXK Live
 Comment[sr]=Каламарес — инсталатер за СолидИксК
 Comment[tr]=Calamares - SolydXK Live için Yükleyici
 Keywords=calamares;system;install;solydxk;installer
@@ -32,6 +35,7 @@ Keywords[de]=Calamares;System;Installation;Solydxk;Installationsprogramm
 Keywords[it]=calamares;sistema;installazione;solydxk;installatore
 Keywords[nl]=calamares;systeem;installeren;solydxk;installatieprogramma
 Keywords[pt]=calamares;sistema;instalar;solydxk;instalador
+Keywords[pt_BR]=calamares;sistema;instalar;solydxk;instalador
 Keywords[sr]=calamares;system;install;solydxk;installer;каламарес;инсталатер;систем
 Keywords[tr]=calamares;system;install;solydxk;installer
 Icon=installsolydxk
