Updated modules and configuration

--- a/calamares/modules/packages.conf
+++ b/calamares/modules/packages.conf
@@ -169,6 +169,16 @@ update_system: true
 # of packages, this can lead to a considerable time savings.
 #
 operations:
+  - try_install:
+    - libreoffice-${LOCALE}
+    - firefox-esr-${LOCALE}
+#    - firefox-${LOCALE}
+    - thunderbird-${LOCALE}
+#    - calligra-${LOCALE}
+#    - gimp-${LOCALE}
+    - aspell-${LOCALE}
+    - hunspell-${LOCALE}
+    - manpages-${LOCALE}
   - try_remove:
-      - 'calamares*'
-      - '^live-*'
+    - 'calamares*'
+    - '^live-*'
