--- a/calamares/modules/keyboard.conf
+++ b/calamares/modules/keyboard.conf
@@ -7,7 +7,7 @@
 # The name of the file to write X11 keyboard settings to
 # The default value is the name used by upstream systemd-localed.
 # Relative paths are assumed to be relative to /etc/X11/xorg.conf.d
-#xOrgConfFileName: "/etc/X11/xorg.conf.d/00-keyboard.conf"
+xOrgConfFileName: "/etc/X11/xorg.conf.d/00-keyboard.conf"
 
 # The path to search for keymaps converted from X11 to kbd format.
 # Common paths for this are:
@@ -20,4 +20,4 @@
 # Write keymap configuration to /etc/default/keyboard, usually
 # found on Debian-related systems.
 # Defaults to true if nothing is set.
-#writeEtcDefaultKeyboard:   true 
+writeEtcDefaultKeyboard:   true 
