--- a/calamares/modules/locale.conf
+++ b/calamares/modules/locale.conf
@@ -37,7 +37,7 @@ zone:                       "Amsterdam"
 #
 # Note that not all systems support live adjustment.
 #
-# adjustLiveTimezone:   true
+adjustLiveTimezone:   false
 
 # System locales are detected in the following order:
 #
@@ -117,9 +117,14 @@ zone:                       "Amsterdam"
 # Also, note the analogous feature in src/modules/welcome/welcome.conf.
 #
 geoip:
-    style:      "json"
-    url:          "https://geoip.kde.org/v1/calamares"
-    selector: ""  # leave blank for the default
+    style:    "xml"
+    url:      "https://geoip.kde.org/v1/ubiquity"  # extended XML format
+    selector: "TimeZone"  # blank uses default, which is wrong
+    
+#geoip:
+#    style:      "json"
+#    url:        "https://geoip.kde.org/v1/calamares"
+#    selector:   ""  # leave blank for the default
 
 # For testing purposes, you could use *fixed* style, to see how Calamares
 # behaves in a particular zone:
