--- a/calamares/modules/partition.conf
+++ b/calamares/modules/partition.conf
@@ -113,15 +113,14 @@ initialSwapChoice: none
 # Restrict the installation on disks that match the type of partition
 # tables that are specified.
 #
-# Suggested values: msdos, gpt
-# If nothing is specified, Calamares defaults to both "msdos" and "mbr".
+# Possible values: msdos, gpt. Names are case-sensitive and defined by KPMCore.
 #
-# Names are case-sensitive and defined by KPMCore.
+# If nothing is specified, Calamares defaults to both "msdos" and "gpt".
+#
 # requiredPartitionTableType: gpt
-# or,
-requiredPartitionTableType:
-     - msdos
-     - gpt
+# requiredPartitionTableType:
+#     - msdos
+#     - gpt
 
 # Default filesystem type, used when a "new" partition is made.
 #
