--- a/calamares/modules/welcome.conf
+++ b/calamares/modules/welcome.conf
@@ -15,10 +15,10 @@
 # The setting can also be a full URL which will then be used
 # instead of the one from the branding file, or empty or not-set
 # which will hide the button.
-showSupportUrl:             false
+showSupportUrl:        false
 showKnownIssuesUrl:    false
-showReleaseNotesUrl:    false
-showDonateUrl:               
+showReleaseNotesUrl:   false
+#showDonateUrl:               
 
 # Requirements checking. These are general, generic, things
 # that are checked. They may not match with the actual requirements
@@ -34,13 +34,40 @@ requirements:
 
     # To check for internet connectivity, Calamares does a HTTP GET
     # on this URL; on success (e.g. HTTP code 200) internet is OK.
-    internetCheckUrl:   https://solydxk.com
+    internetCheckUrl: [ https://solydxk.com, https://www.debian.org ]
+    #
+    # This may be a single URL, or a list or URLs, in which case the
+    # URLs will be checked one-by-one; if any of them returns data,
+    # internet is assumed to be OK. This can be used to check via
+    # a number of places, where some domains may be down or blocked.
+    #
+    # To use a list of URLs, just use YAML list syntax (e.g.
+    #
+    # internetCheckUrl:
+    #     - http://www.kde.org
+    #     - http://www.freebsd.org
+    #
+    # or short-form
+    #
+    # internetCheckUrl: [ http://www.kde.org, http://www.freebsd.org ]
 
     # List conditions to check. Each listed condition will be
     # probed in some way, and yields true or false according to
     # the host system satisfying the condition.
     #
     # This sample file lists all the conditions that are known.
+    #
+    # Note that the last three checks are for testing-purposes only,
+    # and shouldn't be used in production (they are only available
+    # when building Calamares in development mode). There are five
+    # special checks:
+    # - *false* is a check that is always false (unsatisfied)
+    # - *true* is a check that is always true (satisfied)
+    # - *slow-false* takes 3 seconds, and then is false; use this one to
+    #   show off the waiting-spinner before the first results come in
+    # - *slow-true* takes 3 seconds, and then is true
+    # - *snark* is a check that is only satisfied once it has been checked
+    #   at least three times ("what I tell you three times is true").
     check:
         - storage
         - ram
@@ -83,11 +110,6 @@ geoip:
     url:      "https://geoip.kde.org/v1/ubiquity"  # extended XML format
     selector: "CountryCode"  # blank uses default, which is wrong
 
-#geoip:
-#    style:  "xml"
-#    url:    "https://ipapi.co/xml"  # extended XML format
-#    selector: "country"  # blank uses default, which is wrong
-
 # User interface
 #
 # The "select language" icon is an international standard, but it
@@ -99,4 +121,4 @@ geoip:
 #
 # Known icons in this space are "set-language" and "config-language".
 #
-# languageIcon: set-language
+languageIcon: config-language
