--- a/calamares/settings.conf
+++ b/calamares/settings.conf
@@ -139,27 +139,22 @@ sequence:
   - sources-media
   - machineid
   - fstab
-  - ssd-config
   - locale
   - keyboard
   - localecfg
   - luksbootkeyfile
-  - luksboot-fix
-  - plymouthcfg
   - users
   - displaymanager
   - networkcfg
   - hwclock
-  - services-systemd
-  - bootloader-config
-  - grubcfg
-  - bootloader
   - packages
   - packages-conditional
-  - packages-localize
   - packages-non-free
+  - ssdcfg
   - initramfscfg
   - initramfs
+  - bootloader-config
+  - bootloader
   - sources-media-unmount
   - umount
 
