--- a/conf/install-solydxk.desktop
+++ b/conf/install-solydxk.desktop
@@ -4,6 +4,8 @@ Version=1.0
 Name=Install SolydXK
 Name[ca]=Instal·la SolydXK
 Name[de]=SolydXK installieren
+Name[es]=Instalar SolydXK
+Name[es_419]=Instalar SolydXK
 Name[it]=Installa SolydXK
 Name[nl]=Installeer SolydXK
 Name[pt]=Instalar SolydXK
@@ -13,6 +15,8 @@ Name[tr]=SolydXK Yükle
 GenericName=Calamares Installer
 GenericName[ca]=Instal·lador Calamares
 GenericName[de]=Calamares Installationsprogramm
+GenericName[es]=Instalador Calamares
+GenericName[es_419]=Instalador Calamares
 GenericName[it]=Installatore Calamares
 GenericName[nl]=Calamares Installatieprogramma
 GenericName[pt]=Instalador Calamares
@@ -23,6 +27,8 @@ Exec=install-solydxk
 Comment=Calamares - Installer for SolydXK Live
 Comment[ca]=Instal·lador Calamares per a SolydXK Live
 Comment[de]=Calamares - Installationsprogramm für SolydXK Live
+Comment[es]=Calamares - Instalador de SolydXK Live
+Comment[es_419]=Calamares - Instalador de SolydXK Live
 Comment[it]=Calamares - Installatore per SolydXK Live
 Comment[nl]=Calamares - Installatieprogramma voor SolydXK Live
 Comment[pt]=Instalador-Calamares para SolydXK Live
@@ -32,6 +38,8 @@ Comment[tr]=Calamares - SolydXK Live için Yükleyici
 Keywords=calamares;system;install;solydxk;installer
 Keywords[ca]=calamares;system;install;solydxk;installer
 Keywords[de]=Calamares;System;Installation;Solydxk;Installationsprogramm
+Keywords[es]=calamares;system;install;solydxk;installer
+Keywords[es_419]=calamares;system;install;solydxk;installer
 Keywords[it]=calamares;sistema;installazione;solydxk;installatore
 Keywords[nl]=calamares;systeem;installeren;solydxk;installatieprogramma
 Keywords[pt]=calamares;sistema;instalar;solydxk;instalador
