Add depends for calamares-11/12

--- a/debian/control
+++ b/debian/control
@@ -11,12 +11,10 @@ Architecture: all
 # For welcomeq, localeq and keyboardq modules add these dependencies:
 # qml-module-qtgraphicaleffects, qml-module-qtquick-controls, qml-module-org-kde-kirigami2
 Depends: ${misc:Depends},
-    calamares,
-    cryptsetup,
-    keyutils,
-    qml-module-qtquick-window2,
-    qml-module-qtquick2,
+    calamares-11 (>= 3.3) | calamares-12 (>= 3.3),
     python3-apt
+Conflicts: calamares
+Replaces: calamares
 Provides: calamares-settings
 Description: SolydXK theme and settings for the Calamares Installer
  Calamares is a generic installer framework for Linux distributions.
