Fix installing localized packages

--- a/calamares/modules/packages.conf
+++ b/calamares/modules/packages.conf
@@ -170,12 +170,10 @@ update_system: true
 #
 operations:
   - try_install:
-    - libreoffice-${LOCALE}
-    - firefox-esr-${LOCALE}
-#    - firefox-${LOCALE}
-    - thunderbird-${LOCALE}
-#    - calligra-${LOCALE}
-#    - gimp-${LOCALE}
+    - libreoffice-l10n-${LOCALE}
+    - libreoffice-help-${LOCALE}
+    - firefox-esr-l10n-${LOCALE}
+    - thunderbird-l10n-${LOCALE}
     - aspell-${LOCALE}
     - hunspell-${LOCALE}
     - manpages-${LOCALE}
