Updated translation: lt

--- a/conf/install-solydxk.desktop
+++ b/conf/install-solydxk.desktop
@@ -7,6 +7,7 @@ Name[de]=SolydXK installieren
 Name[es]=Instalar SolydXK
 Name[es_419]=Instalar SolydXK
 Name[it]=Installa SolydXK
+Name[lt]=Įdiegti SolydXK
 Name[nl]=Installeer SolydXK
 Name[pt]=Instalar SolydXK
 Name[pt_BR]=Instalar SolydXK
@@ -18,6 +19,7 @@ GenericName[de]=Calamares Installationsprogramm
 GenericName[es]=Instalador Calamares
 GenericName[es_419]=Instalador Calamares
 GenericName[it]=Installatore Calamares
+GenericName[lt]=Calamares diegimo programa
 GenericName[nl]=Calamares Installatieprogramma
 GenericName[pt]=Instalador Calamares
 GenericName[pt_BR]=Instalador Calamares
@@ -30,6 +32,7 @@ Comment[de]=Calamares - Installationsprogramm für SolydXK Live
 Comment[es]=Calamares - Instalador de SolydXK Live
 Comment[es_419]=Calamares - Instalador de SolydXK Live
 Comment[it]=Calamares - Installatore per SolydXK Live
+Comment[lt]=Calamares - SolydXK Live diegimo programa
 Comment[nl]=Calamares - Installatieprogramma voor SolydXK Live
 Comment[pt]=Instalador-Calamares para SolydXK Live
 Comment[pt_BR]=Instalador-Calamares para SolydXK Live
@@ -41,6 +44,7 @@ Keywords[de]=Calamares;System;Installation;Solydxk;Installationsprogramm
 Keywords[es]=calamares;system;install;solydxk;installer
 Keywords[es_419]=calamares;system;install;solydxk;installer
 Keywords[it]=calamares;sistema;installazione;solydxk;installatore
+Keywords[lt]=calamares;sistema;diegimo programa;įdiegti;solydxk;
 Keywords[nl]=calamares;systeem;installeren;solydxk;installatieprogramma
 Keywords[pt]=calamares;sistema;instalar;solydxk;instalador
 Keywords[pt_BR]=calamares;sistema;instalar;solydxk;instalador
