Updated translation: pt, ca

--- a/conf/install-solydxk.desktop
+++ b/conf/install-solydxk.desktop
@@ -34,7 +34,7 @@ Comment[es_419]=Calamares - Instalador de SolydXK Live
 Comment[it]=Calamares - Installatore per SolydXK Live
 Comment[lt]=Calamares - SolydXK Live diegimo programa
 Comment[nl]=Calamares - Installatieprogramma voor SolydXK Live
-Comment[pt]=Instalador-Calamares para SolydXK Live
+Comment[pt]=Calamares - Instalador para SolydXK Live
 Comment[pt_BR]=Instalador-Calamares para SolydXK Live
 Comment[sr]=Каламарес — инсталатер за СолидИксК
 Comment[tr]=Calamares - SolydXK Live için Yükleyici
