Add swap-resume module

--- a/calamares/settings.conf
+++ b/calamares/settings.conf
@@ -151,6 +151,7 @@ sequence:
   - packages-conditional
   - packages-non-free
   - ssdcfg
+  - swap-resume
   - initramfscfg
   - initramfs
   - bootloader-config
