Update modules conf for LUKS2

--- a/calamares/modules/welcome.conf
+++ b/calamares/modules/welcome.conf
@@ -10,8 +10,13 @@
 # can check requirements for installation.
 ---
 # Display settings for various buttons on the welcome page.
-# The URLs themselves come from branding.desc is the setting
-# here is "true". If the setting is false, the button is hidden.
+# The URLs themselves come from `branding.desc`. Each button
+# is show if the corresponding *show<buttonname>* setting
+# here is "true". If the setting is "false", the button is hidden.
+# Empty or not-set is interpreted as "false".
+#
+# TODO:3.3 Remove the URL fallback here; URLs only in `branding.desc`
+#
 # The setting can also be a full URL which will then be used
 # instead of the one from the branding file, or empty or not-set
 # which will hide the button.
@@ -68,6 +73,8 @@ requirements:
     # - *slow-true* takes 3 seconds, and then is true
     # - *snark* is a check that is only satisfied once it has been checked
     #   at least three times ("what I tell you three times is true").
+    # Keep in mind that "true" and "false" are YAML keywords for
+    # boolean values, so should be quoted.
     check:
         - storage
         - ram
