--- a/calamares/settings.conf
+++ b/calamares/settings.conf
@@ -152,8 +152,10 @@ sequence:
   - packages-non-free
   - ssdcfg
   - swap-resume
+  - services-systemd
   - initramfscfg
   - initramfs
+  - grubcfg
   - bootloader-config
   - bootloader
   - sources-media-unmount
