--- a/calamares/modules/partition.conf
+++ b/calamares/modules/partition.conf
@@ -10,7 +10,13 @@ efiSystemPartition:     "/boot/efi"
 
 # This optional setting specifies the size of the EFI system partition.
 # If nothing is specified, the default size of 300MiB will be used.
-#efiSystemPartitionSize:     300M
+#
+# This size applies both to automatic partitioning and the checks
+# during manual partitioning. A minimum of 32MiB is enforced,
+# 300MiB is the default, M is treated as MiB, and if you really want
+# one-million (10^6) bytes, use MB.
+#
+# efiSystemPartitionSize:     300M
 
 # This optional setting specifies the name of the EFI system partition (see
 # PARTLABEL; gpt only; requires KPMCore >= 4.2.0).
@@ -57,6 +63,30 @@ userSwapChoices:
 # LEGACY SETTINGS (these will generate a warning)
 # ensureSuspendToDisk:    true
 # neverCreateSwap:        false
+
+# This setting specifies the LUKS generation (i.e LUKS1, LUKS2) used internally by
+# cryptsetup when creating an encrypted partition.
+#
+# This option is set to luks1 by default, as grub doesn't support LUKS2 + Argon2id
+# currently. On the other hand grub does support LUKS2 with PBKDF2 and could therefore be
+# also set to luks2. Also there are some patches for grub and Argon2.
+# See: https://aur.archlinux.org/packages/grub-improved-luks2-git
+#
+# Choices: luks1, luks2 (in addition, "luks" means "luks1")
+#
+# The default is luks1
+#
+luksGeneration: luks2
+
+# This setting determines if encryption should be allowed when using zfs.  This
+# setting has no effect unless zfs support is provided.
+#
+# This setting is to handle the fact that some bootloaders(such as grub) do not
+# support zfs encryption.
+#
+# The default is true
+#
+# allowZfsEncryption: true
 
 # Correctly draw nested (e.g. logical) partitions as such.
 drawNestedPartitions:   false
@@ -138,6 +168,20 @@ initialSwapChoice: none
 # Names are case-sensitive and defined by KPMCore.
 defaultFileSystemType:  "ext4"
 
+# Selectable filesystem type, used when "erase" is done.
+#
+# When erasing the disk, the *defaultFileSystemType* is used (see
+# above), but it is also possible to give users a choice:
+# list suitable filesystems here. A drop-down is provided
+# to pick which is the filesystems will be used.
+#
+# The value *defaultFileSystemType* is added to this list (with a warning)
+# if not present; the default pick is the *defaultFileSystemType*.
+#
+# If not specified at all, uses *defaultFileSystemType* without a
+# warning (this matches traditional no-choice-available behavior best).
+# availableFileSystemTypes:  ["ext4","f2fs"]
+
 # Show/hide LUKS related functionality in automated partitioning modes.
 # Disable this if you choose not to deploy early unlocking support in GRUB2
 # and/or your distribution's initramfs solution.
@@ -151,8 +195,6 @@ defaultFileSystemType:  "ext4"
 # may arise as a consequence of setting this option to false.
 # It is strongly recommended that system integrators put in the work to support
 # LUKS unlocking support in GRUB2 and initramfs/dracut/mkinitcpio/etc.
-# Support is offered to system integrators that wish to do so, through the
-# Calamares bug tracker, as well as in #calamares on Freenode.
 # For more information on setting up GRUB2 for Calamares with LUKS, see
 # https://github.com/calamares/calamares/wiki/Deploy-LUKS
 #
@@ -183,7 +225,7 @@ defaultFileSystemType:  "ext4"
 #       maxSize: 10G
 #       attributes: 0xffff000000000003
 #     - name: "home"
-#       type = "933ac7e1-2eb4-4f13-b844-0e14e2aef915"
+#       type: "933ac7e1-2eb4-4f13-b844-0e14e2aef915"
 #       filesystem: "ext4"
 #       mountPoint: "/home"
 #       size: 3G
@@ -206,7 +248,12 @@ defaultFileSystemType:  "ext4"
 #   - uuid: partition uuid (optional parameter; gpt only; requires KPMCore >= 4.2.0)
 #   - type: partition type (optional parameter; gpt only; requires KPMCore >= 4.2.0)
 #   - attributes: partition attributes (optional parameter; gpt only; requires KPMCore >= 4.2.0)
-#   - filesystem: filesystem type (optional parameter; fs not created if "unformatted" or unset)
+#   - filesystem: filesystem type (optional parameter)
+#       - if not set at all, treat as "unformatted"
+#       - if "unformatted", no filesystem will be created
+#       - if "unknown" (or an unknown FS name, like "elephant") then the
+#         default filesystem type, or the user's choice, will be applied instead
+#         of "unknown" (e.g. the user might pick ext4, or xfs).
 #   - mountPoint: partition mount point (optional parameter; not mounted if unset)
 #   - size: partition size in bytes (append 'K', 'M' or 'G' for KiB, MiB or GiB)
 #           or
@@ -242,4 +289,3 @@ partitionLayout:
 #                  the welcome module, **and** configure this value in
 #                  `welcome.conf`, not here.
 # requiredStorage: 3.5
- 
