--- a/.tx/config
+++ b/.tx/config
@@ -1,5 +1,5 @@
 [main]
-host = https://www.transifex.com
+host = https://app.transifex.com
 
 [o:abalfoort:p:calamares-settings-solydxk:r:calamares-settings-solydxkpot]
 file_filter = po/<lang>.po
