Add module remove-deborphan

--- a/calamares/settings.conf
+++ b/calamares/settings.conf
@@ -154,6 +154,7 @@ sequence:
   - packages
   - packages-conditional
   - packages-non-free
+  - remove-deborphan
   - luksbootkeyfile
   - initramfscfg
   - initramfs
