--- a/conf/install-solydxk.desktop
+++ b/conf/install-solydxk.desktop
@@ -3,51 +3,67 @@ Type=Application
 Version=1.0
 Name=Install SolydXK
 Name[ca]=Instal·la SolydXK
+Name[da]=Installer SolydXK
 Name[de]=SolydXK installieren
 Name[es]=Instalar SolydXK
 Name[es_419]=Instalar SolydXK
-Name[it]=Installa SolydXK
+Name[fr]=Installer SolydXK
+Name[it]=Installare SolydXK
 Name[lt]=Įdiegti SolydXK
+Name[nb]=Installer SolydXK
 Name[nl]=Installeer SolydXK
 Name[pt]=Instalar SolydXK
 Name[pt_BR]=Instalar SolydXK
+Name[ru]=Установить SolydXK
 Name[sr]=Инсталирај СолидИксК
 Name[tr]=SolydXK Yükle
 GenericName=Calamares Installer
 GenericName[ca]=Instal·lador Calamares
+GenericName[da]=Calamares installationsprogram
 GenericName[de]=Calamares Installationsprogramm
 GenericName[es]=Instalador Calamares
 GenericName[es_419]=Instalador Calamares
+GenericName[fr]=Calamares Installateur
 GenericName[it]=Installatore Calamares
 GenericName[lt]=Calamares diegimo programa
+GenericName[nb]=Calamares installasjonsprogram
 GenericName[nl]=Calamares Installatieprogramma
 GenericName[pt]=Instalador Calamares
 GenericName[pt_BR]=Instalador Calamares
+GenericName[ru]=Calamares Инсталлятор
 GenericName[sr]=Каламарес инсталатер
 GenericName[tr]=Calamares Yükleyici
 Exec=install-solydxk
 Comment=Calamares - Installer for SolydXK Live
 Comment[ca]=Instal·lador Calamares per a SolydXK Live
+Comment[da]=Calamares - installationsprogram til SolydXK Live
 Comment[de]=Calamares - Installationsprogramm für SolydXK Live
 Comment[es]=Calamares - Instalador de SolydXK Live
 Comment[es_419]=Calamares - Instalador de SolydXK Live
+Comment[fr]=Calamares - Installateur pour SolydXK Live
 Comment[it]=Calamares - Installatore per SolydXK Live
 Comment[lt]=Calamares - SolydXK Live diegimo programa
+Comment[nb]=Calamares - installasjonsprogram for SolydXK Live
 Comment[nl]=Calamares - Installatieprogramma voor SolydXK Live
 Comment[pt]=Calamares - Instalador para SolydXK Live
 Comment[pt_BR]=Instalador-Calamares para SolydXK Live
+Comment[ru]=Calamares - Инсталлятор для SolydXK Live
 Comment[sr]=Каламарес — инсталатер за СолидИксК
 Comment[tr]=Calamares - SolydXK Live için Yükleyici
 Keywords=calamares;system;install;solydxk;installer
 Keywords[ca]=calamares;system;install;solydxk;installer
+Keywords[da]=calamares;system;installere;solydxk;installationsprogram
 Keywords[de]=Calamares;System;Installation;Solydxk;Installationsprogramm
 Keywords[es]=calamares;system;install;solydxk;installer
 Keywords[es_419]=calamares;system;install;solydxk;installer
+Keywords[fr]=calamares;système;installer;solydxk;installateur
 Keywords[it]=calamares;sistema;installazione;solydxk;installatore
 Keywords[lt]=calamares;sistema;diegimo programa;įdiegti;solydxk;
+Keywords[nb]=calamares;system;installere;solydxk;installasjonsprogram
 Keywords[nl]=calamares;systeem;installeren;solydxk;installatieprogramma
 Keywords[pt]=calamares;sistema;instalar;solydxk;instalador
 Keywords[pt_BR]=calamares;sistema;instalar;solydxk;instalador
+Keywords[ru]=calamares;система;установка;solydxk;инсталлятор
 Keywords[sr]=calamares;system;install;solydxk;installer;каламарес;инсталатер;систем
 Keywords[tr]=calamares;system;install;solydxk;installer
 Icon=installsolydxk
