--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,10 @@ Depends: ${misc:Depends},
     calamares (>= 3.3),
     python3-apt
 Provides: calamares-settings
+Conflicts: calamares-settings-debian,
+  calamares-settings-mobian
+Replaces: calamares-settings-debian,
+  calamares-settings-mobian
 Description: SolydXK theme and settings for the Calamares Installer
  Calamares is a generic installer framework for Linux distributions.
  By default, it contains a set of boilerplate wording and images. This
