Updated conf files

--- a/calamares/modules/displaymanager.conf
+++ b/calamares/modules/displaymanager.conf
@@ -73,3 +73,5 @@ greetd:
   greeter_group: "wheel"
 lightdm:
   preferred_greeters: ["lightdm-greeter.desktop", "slick-greeter.desktop"]
+sddm:
+  configuration_file: "/etc/sddm.conf"
