Add configuration for SDDM

--- a/calamares/modules/displaymanager.conf
+++ b/calamares/modules/displaymanager.conf
@@ -17,7 +17,7 @@
 #
 displaymanagers:
 #  - slim
-#  - sddm
+  - sddm
   - lightdm
 #  - gdm
 #  - mdm
@@ -72,6 +72,6 @@ greetd:
   greeter_user: "tom_bombadil"
   greeter_group: "wheel"
 lightdm:
-  preferred_greeters: ["lightdm-greeter.desktop", "slick-greeter.desktop"]
+  preferred_greeters: ["lightdm-gtk-greeter.desktop"]
 sddm:
-  configuration_file: "/etc/sddm.conf"
+  configuration_file: "/etc/sddm.conf.d/calamares.conf"
