--- a/conf/install-solydxk.desktop
+++ b/conf/install-solydxk.desktop
@@ -12,7 +12,7 @@ Name[it]=Installare SolydXK
 Name[lt]=Įdiegti SolydXK
 Name[nb]=Installer SolydXK
 Name[nl]=Installeer SolydXK
-Name[pt]=Instalar SolydXK
+Name[pt]=Instalar o SolydXK
 Name[pt_BR]=Instalar SolydXK
 Name[ru]=Установить SolydXK
 Name[sr]=Инсталирај СолидИксК
@@ -45,7 +45,7 @@ Comment[it]=Calamares - Installatore per SolydXK Live
 Comment[lt]=Calamares - SolydXK Live diegimo programa
 Comment[nb]=Calamares - installasjonsprogram for SolydXK Live
 Comment[nl]=Calamares - Installatieprogramma voor SolydXK Live
-Comment[pt]=Calamares - Instalador para SolydXK Live
+Comment[pt]=Calamares - Instalador do SolydXK Live
 Comment[pt_BR]=Instalador-Calamares para SolydXK Live
 Comment[ru]=Calamares - Инсталлятор для SolydXK Live
 Comment[sr]=Каламарес — инсталатер за СолидИксК
@@ -61,7 +61,7 @@ Keywords[it]=calamares;sistema;installazione;solydxk;installatore
 Keywords[lt]=calamares;sistema;diegimo programa;įdiegti;solydxk;
 Keywords[nb]=calamares;system;installere;solydxk;installasjonsprogram
 Keywords[nl]=calamares;systeem;installeren;solydxk;installatieprogramma
-Keywords[pt]=calamares;sistema;instalar;solydxk;instalador
+Keywords[pt]=calamares;system;install;solydxk;installer
 Keywords[pt_BR]=calamares;sistema;instalar;solydxk;instalador
 Keywords[ru]=calamares;система;установка;solydxk;инсталлятор
 Keywords[sr]=calamares;system;install;solydxk;installer;каламарес;инсталатер;систем
