--- a/conf/autostart/solydxk-light-locker-live.desktop
+++ b/conf/autostart/solydxk-light-locker-live.desktop
@@ -1,8 +1,9 @@
 [Desktop Entry]
-Type=Application
 Name=Disable Light Locker
 Exec=killall light-locker
-StartupNotify=false
 NoDisplay=true
+StartupNotify=false
+Terminal=false
+Type=Application
 X-GNOME-Autostart-enabled=true
 X-KDE-autostart-after=panel
