Rename Install SolydXK to SolydXK Installer

--- a/conf/solydxk-installer.desktop
+++ b/conf/solydxk-installer.desktop
@@ -1,39 +1,22 @@
 [Desktop Entry]
 Type=Application
 Version=1.0
-Name=Install SolydXK
-Name[ca]=Instal·la SolydXK
-Name[da]=Installer SolydXK
-Name[de]=SolydXK installieren
-Name[es]=Instalar SolydXK
-Name[es_419]=Instalar SolydXK
-Name[fr]=Installer SolydXK
-Name[it]=Installare SolydXK
-Name[lt]=Įdiegti SolydXK
-Name[nb]=Installer SolydXK
-Name[nl]=Installeer SolydXK
-Name[pt]=Instalar o SolydXK
-Name[pt_BR]=Instalar SolydXK
-Name[ru]=Установить SolydXK
-Name[sr]=Инсталирај СолидИксК
-Name[tr]=SolydXK Yükle
-GenericName=Calamares Installer
-GenericName[ca]=Instal·lador Calamares
-GenericName[da]=Calamares installationsprogram
-GenericName[de]=Calamares Installationsprogramm
-GenericName[es]=Instalador Calamares
-GenericName[es_419]=Instalador Calamares
-GenericName[fr]=Calamares Installateur
-GenericName[it]=Installatore Calamares
-GenericName[lt]=Calamares diegimo programa
-GenericName[nb]=Calamares installasjonsprogram
-GenericName[nl]=Calamares Installatieprogramma
-GenericName[pt]=Instalador Calamares
-GenericName[pt_BR]=Instalador Calamares
-GenericName[ru]=Calamares Инсталлятор
-GenericName[sr]=Каламарес инсталатер
-GenericName[tr]=Calamares Yükleyici
-Exec=install-solydxk
+Name=SolydXK Installer
+Name[ca]=Instal·lador SolydXK
+Name[da]=SolydXK installationsprogram
+Name[de]=SolydXK Installationsprogramm
+Name[es]=Instalador SolydXK
+Name[es_419]=Instalador SolydXK
+Name[fr]=SolydXK Installateur
+Name[it]=Installatore SolydXK
+Name[lt]=SolydXK diegimo programa
+Name[nb]=SolydXK installasjonsprogram
+Name[nl]=SolydXK Installatieprogramma
+Name[pt]=Instalador SolydXK
+Name[pt_BR]=Instalador SolydXK
+Name[ru]=SolydXK Инсталлятор
+Name[sr]=СолидИксК инсталатер
+Name[tr]=SolydXK Yükleyici
 Comment=Calamares - Installer for SolydXK Live
 Comment[ca]=Instal·lador Calamares per a SolydXK Live
 Comment[da]=Calamares - installationsprogram til SolydXK Live
@@ -66,7 +49,8 @@ Keywords[pt_BR]=calamares;sistema;instalar;solydxk;instalador
 Keywords[ru]=calamares;система;установка;solydxk;инсталлятор
 Keywords[sr]=calamares;system;install;solydxk;installer;каламарес;инсталатер;систем
 Keywords[tr]=calamares;system;install;solydxk;installer
-Icon=installsolydxk
+Exec=solydxk-installer
+Icon=solydxk_installer
 Terminal=false
 Categories=Qt;System;
 StartupWMClass=calamares
