--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: calamares-settings-solydxk
 Section: utils
 Priority: optional
-Maintainer: Arjen Balfoort <arjenbalfoort@hotmail.com>
+Maintainer: Arjen Balfoort <solydxk.abalfoort@tuta.com>
 Build-Depends: debhelper-compat (= 13), intltool, libglib2.0-bin, qttools5-dev-tools
 Standards-Version: 4.5.0
 Rules-Requires-Root: no
